<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_image">Splash screen image</string>

    <!--  Splash Screen -->
    <string name="retry_connect">Tentar novamente</string>
    <!-- Login activity -->
    <string name="title_activity_login">Login</string>
    <string name="input_user">Usuário</string>
    <string name="input_password">Senha</string>
    <string name="login_button">Login</string>
    <string name="register"><a href="http://www.unichat.com.br/register.php">Registre-se!</a></string>
    <string name="ad_unit_id">ca-app-pub-7698594623226287/6894259007</string>

    <!-- MainMeny Activity -->
    <string name="title_activity_main_menu">Menu</string>
    <string name="choose_sex">Quero falar com</string>
    <string name="choose_course">do curso de</string>
    <string name="whatever_btn">Tanto faz</string>
    <string name="female_btn">Mulher</string>
    <string name="male_btn">Homem</string>
    <string name="connect_btn">Conectar!</string>
    <string name="title_activity_server">Server</string>
    
    <!-- Menu -->
    <string name="action_logout">Logout</string>
    
    <!--  Chat -->
    <string name="message_here">Escreva uma mensagem</string>
    
    <!-- Pop up menu -->
    <string name="img_gallery">Galeria</string>
    <string name="img_camera">Câmera</string>
</resources>
