<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainMenu"
    android:id="@+id/menu_layout" >
	
    <ScrollView
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_marginBottom="50dp">
    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" >
	    	
	        <TextView
			    android:id="@+id/logoutText"
			    android:textColorLink="@color/uniChatRed"
			    android:textColor="@color/dark_gray"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="20dp"
			    android:layout_marginBottom="10dp"
			    android:text="@string/action_logout"
			    android:layout_gravity="right"
			    android:onClick="logoutText"
			    android:clickable="true"/>
	        
	        <LinearLayout
	            android:id="@+id/paid_part"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:orientation="vertical">
	            
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/choose_sex"
			        android:textSize="21sp" />
			    
			    <LinearLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:layout_marginTop="20dp"
			        android:layout_marginBottom="20dp">
			        
				    <Button
				        android:id="@+id/whatever_btn"
				        style="?android:attr/buttonStyleSmall"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/whatever_btn"
				        android:textSize="12sp"
				        android:textColor="@color/dark_gray"
				        android:drawableTop="@drawable/whatever_pressed"
				        android:drawablePadding="10dp"
				        android:background="@android:color/transparent"
				        android:layout_marginRight="20dp"
				        android:onClick="btnSelected" />
				    <Button
				        android:id="@+id/female_btn"
				        style="?android:attr/buttonStyleSmall"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/female_btn"
				        android:textSize="12sp"
				        android:textColor="@color/dark_gray"
				        android:drawableTop="@drawable/female"
				        android:drawablePadding="10dp"
				        android:background="@android:color/transparent"
				        android:onClick="btnSelected" />
				    
				    <Button
				        android:id="@+id/male_btn"
				        style="?android:attr/buttonStyleSmall"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/male_btn"
				        android:textSize="12sp"
				        android:textColor="@color/dark_gray"
				        android:drawableTop="@drawable/male"
				        android:drawablePadding="10dp"
				        android:background="@android:color/transparent"
				        android:layout_marginLeft="20dp"
				        android:onClick="btnSelected" />
			    
			    </LinearLayout>
			    
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/choose_course"
			        android:textSize="21sp" />
			    
			    <Spinner
			        android:id="@+id/courses_spinner"
			        android:layout_width="250dp"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="20dp" />
			</LinearLayout>
		    
		    <Button
		        android:id="@+id/connect_btn"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/connect_btn"
		        android:textSize="14sp"
		        android:drawableTop="@drawable/connect_btn"
		        android:textStyle="bold"
		        android:drawablePadding="10dp"
		        android:background="@android:color/transparent"
		        android:layout_marginTop="20dp"
		        android:onClick="connect" />
		    
		    <Button
		        android:id="@+id/retry_btn"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/retry_connect"
		        android:textSize="12sp"
		        android:drawableTop="@drawable/retry"
		        android:drawablePadding="10dp"
		        android:background="@android:color/transparent"
		        android:onClick="retryConnection"
		        android:layout_marginTop="20dp"
		        android:visibility="gone" />
		    
		    <Button
		        android:id="@+id/disabled_cnt_btn"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/dark_gray"
		        android:text="A lista de contatos está cheia"
		        android:textSize="12sp"
		        android:drawableTop="@drawable/connect_disabled"
		        android:background="@android:color/transparent"
		        android:layout_marginTop="20dp"
		        android:visibility="gone"  />
		    
		</LinearLayout>
		    
    </ScrollView>

</RelativeLayout>


